--- a/index.html
+++ b/index.html
@@ -207,18 +207,23 @@ data-bs-ride-> mark a carousel as animating starting at page load; -->
 
   <!-- Call to Action -->
 
-  <section id="cta">
+  <section id="cta" class="callToAction section-style">
 
-    <h3>Find the True Love of Your Dog's Life Today.</h3>
-    <button type="button">Download</button>
-    <button type="button">Download</button>
+    <h3 class="cta-title">Find the True Love of Your Dog's Life Today.</h3>
+    <button type="button" class="btn btn-dark btn-lg"><i class="fab fa-apple"></i> Download</button>
+    <button type="button" class="btn btn-outline-light btn-lg ms-2"><i class="fab fa-google-play"></i> Download</button>
 
   </section>
 
 
   <!-- Footer -->
 
-  <footer id="footer">
+  <footer id="footer" class="footer">
+
+    <i class="fab fa-twitter"></i>
+    <i class="fab fa-facebook-square"></i>
+    <i class="fab fa-instagram-square"></i>
+    <i class="far fa-envelope"></i>
 
     <p>© Copyright 2018 TinDog</p>
 
