--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
               <a class="nav-link" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
+              <a class="nav-link" href="#footer">Contact</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Pricing</a>
+              <a class="nav-link" href="#pricing">Pricing</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Download</a>
+              <a class="nav-link" href="#cta">Download</a>
             </li>
             </li>
           </ul>
@@ -50,7 +50,7 @@
       </nav>
 
       <!-- Title -->
-      <div class="row">
+      <div class="row homePage">
         <div class="col-lg-6">
           <h1 class="slogan">Meet new and interesting dogs nearby.</h1>
           <button type="button" class="btn btn-dark btn-lg"><i class="fab fa-apple"></i> Download</button>
