--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <body>
 
-  <section id="title">
+  <section id="title" class="colored-section">
     <div class="container-fluid title">
       <!-- Nav Bar -->
       <nav class="navbar navbar-expand-lg navbar-dark ">
@@ -69,7 +69,7 @@
 
   <!-- Features -->
 
-  <section id="features">
+  <section id="features" class="white-section features">
     <div class="container-fluid features section-style">
       <div class="row">
         <div class="col-lg-4">
@@ -94,7 +94,7 @@
 
   <!-- Testimonials -->
 
-  <section id="testimonials" class="testimonials">
+  <section id="testimonials" class="testimonials colored-section">
     <!-- carousel explanation:
 class: slide-> enable animation;
 data-bs-ride-> mark a carousel as animating starting at page load; -->
@@ -133,7 +133,7 @@ data-bs-ride-> mark a carousel as animating starting at page load; -->
 
   <!-- Press -->
 
-  <section id="press" class="press">
+  <section id="press" class="press colored-section">
     <img src="images/techcrunch.png" alt="tc-logo">
     <img src="images/tnw.png" alt="tnw-logo">
     <img src="images/bizinsider.png" alt="biz-insider-logo">
@@ -144,7 +144,7 @@ data-bs-ride-> mark a carousel as animating starting at page load; -->
 
   <!-- Pricing -->
 
-  <section id="pricing" class="pricing section-style">
+  <section id="pricing" class="pricing section-style white-section">
     <h2>A Plan for Every Dog's Needs</h2>
     <p>Simple and affordable price plans for your and your dog.</p>
     <div class="row">
@@ -207,7 +207,7 @@ data-bs-ride-> mark a carousel as animating starting at page load; -->
 
   <!-- Call to Action -->
 
-  <section id="cta" class="callToAction section-style">
+  <section id="cta" class="callToAction section-style colored-section">
 
     <h3 class="cta-title">Find the True Love of Your Dog's Life Today.</h3>
     <button type="button" class="btn btn-dark btn-lg"><i class="fab fa-apple"></i> Download</button>
