file name is capital sensetive

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ data-bs-ride-> mark a carousel as animating starting at page load; -->
   <!-- Press -->
 
   <section id="press" class="press colored-section">
-    <img src="images/techcrunch.png" alt="tc-logo">
+    <img src="images/TechCrunch.png" alt="tc-logo">
     <img src="images/tnw.png" alt="tnw-logo">
     <img src="images/bizinsider.png" alt="biz-insider-logo">
     <img src="images/mashable.png" alt="mashable-logo">
